crates/biome_cli/tests/snapshots/main_commands_format/applies_custom_quote_style.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --javascript-formatter-quote-style single --quote-properties preserve --write file.js
```

## `file.js`

```js
let a = 'something';
let b = {
	'hey': 'hello',
};

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
