crates/biome_cli/tests/snapshots/main_commands_format/applies_custom_trailing_commas.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --trailing-commas none --write file.js
```

## `file.js`

```js
const a = [
	longlonglonglongItem1longlonglonglongItem1,
	longlonglonglongItem1longlonglonglongItem2,
	longlonglonglongItem1longlonglonglongItem3
];

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
