crates/biome_cli/tests/snapshots/main_commands_format/applies_custom_trailing_commas_using_the_deprecated_option.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
const a = [
	longlonglonglongItem1longlonglonglongItem1,
	longlonglonglongItem1longlonglonglongItem2,
	longlonglonglongItem1longlonglonglongItem3
];

```

# Emitted Messages

```block
internalError/fs  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! The argument --trailing-comma is deprecated, it will be removed in the next major release. Use --trailing-commas instead.
  

```

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
