crates/biome_cli/tests/snapshots/main_commands_format/can_format_graphphs_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.graphqls
```

## `file.graphqls`

```graphqls
scalar Time
scalar UUID

type User {
	id: UUID!
	name: String!
	updatedAt: Time!
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
