crates/biome_cli/tests/snapshots/main_commands_format/custom_config_file_path.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --config-path=/test --write file.js
```

## `/test/biome.json`

```json
{
  "formatter": {
    "enabled": true,
    "lineWidth": 160,
    "indentStyle": "space",
    "indentWidth": 6
  }
}
```

## `file.js`

```js
function f() {
      return { a, b };
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
