crates/biome_cli/tests/snapshots/main_commands_format/does_format_included_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "formatter": {
    "include": ["./**/*.js"]
  }
}
```

## `src/file1.js`

```js
statement();

```

## `src/file2.js`

```js
statement();

```

# Emitted Messages

```block
Formatted 3 files in <TIME>. Fixed 3 files.
```


