crates/biome_cli/tests/snapshots/main_commands_format/does_not_format_if_disabled.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --stdin-file-path mock.js
```

## `biome.json`

```json
{
  "formatter": {
    "enabled": false
  }
}
```

# Input messages

```block
function f() {return{}}
```

# Termination Message

```block
stdin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The contents aren't fixed. Use the `--write` flag to fix them.
  


```

# Emitted Messages

```block
function f() {return{}}
```

```block
The content was not formatted because the formatter is currently disabled.
```
